--- a/CourseraClone.vcxproj
+++ b/CourseraClone.vcxproj
@@ -96,6 +96,7 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard_C>Default</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <AdditionalDependencies>User32.lib</AdditionalDependencies>
@@ -164,7 +165,7 @@
     <ClInclude Include="Headers\Screens\DashboardEstudianteScreen.h" />
     <ClInclude Include="Headers\Screens\DashboardOrganizacionScreen.h" />
     <ClInclude Include="Headers\Screens\EditarPerfilScreen.h" />
-    <ClInclude Include="Headers\Screens\ExplorarCursosYEspecialidadesScreen.h" />
+    <ClInclude Include="Headers\Screens\ExplorarContenidoScreen.h" />
     <ClInclude Include="Headers\Screens\LandingPageScreen.h" />
     <ClInclude Include="Headers\Screens\LoginScreen.h" />
     <ClInclude Include="Headers\Screens\MostrarCursoScreen.h" />
@@ -172,7 +173,7 @@
     <ClInclude Include="Headers\Screens\PerfilEstudianteScreen.h" />
     <ClInclude Include="Headers\Screens\PerfilOrganizacionScreen.h" />
     <ClInclude Include="Headers\Screens\RegistroScreen.h" />
-    <ClInclude Include="Headers\Screens\VerBboletasScreen.h" />
+    <ClInclude Include="Headers\Screens\VerBoletasScreen.h" />
     <ClInclude Include="Headers\Utils\ScreenSystem.h" />
     <ClInclude Include="Headers\Utils\SystemUtils.h" />
     <ClInclude Include="Headers\Utils\UI_Ascii.h" />
