--- a/CourseraClone.vcxproj
+++ b/CourseraClone.vcxproj
@@ -139,8 +139,9 @@
     <None Include="Resources\Documentation\Plan de implementacion.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Headers\Controllers\Controladora.h" />
-    <ClInclude Include="Headers\Controllers\GestionadorCursos.h" />
+    <ClInclude Include="Headers\Controllers\FilesManager.hpp" />
+    <ClInclude Include="Headers\Controllers\MainController.hpp" />
+    <ClInclude Include="Headers\Controllers\CourseManager.hpp" />
     <ClInclude Include="Headers\DataStructures\algoritmosBusqueda.hpp" />
     <ClInclude Include="Headers\DataStructures\algoritmosOrdenamiento.h" />
     <ClInclude Include="Headers\DataStructures\BinaryHeap.h" />
