Adaptacion general de clases a .hpp

--- a/CourseraClone.vcxproj
+++ b/CourseraClone.vcxproj
@@ -144,43 +144,43 @@
     <ClInclude Include="Headers\Controllers\MainController.hpp" />
     <ClInclude Include="Headers\Controllers\CourseManager.hpp" />
     <ClInclude Include="Headers\DataStructures\algoritmosBusqueda.hpp" />
-    <ClInclude Include="Headers\DataStructures\algoritmosOrdenamiento.h" />
-    <ClInclude Include="Headers\DataStructures\BinaryHeap.h" />
-    <ClInclude Include="Headers\DataStructures\BinarySearchTree.h" />
-    <ClInclude Include="Headers\DataStructures\HashEntity.h" />
-    <ClInclude Include="Headers\DataStructures\HashTable.h" />
-    <ClInclude Include="Headers\DataStructures\LinkedList.h" />
-    <ClInclude Include="Headers\DataStructures\Nodo.h" />
-    <ClInclude Include="Headers\DataStructures\PriorityQueue.h" />
-    <ClInclude Include="Headers\DataStructures\Queue.h" />
-    <ClInclude Include="Headers\DataStructures\Stack.h" />
+    <ClInclude Include="Headers\DataStructures\algoritmosOrdenamiento.hpp" />
+    <ClInclude Include="Headers\DataStructures\BinaryHeap.hpp" />
+    <ClInclude Include="Headers\DataStructures\BinarySearchTree.hpp" />
+    <ClInclude Include="Headers\DataStructures\HashEntity.hpp" />
+    <ClInclude Include="Headers\DataStructures\HashTable.hpp" />
+    <ClInclude Include="Headers\DataStructures\LinkedList.hpp" />
+    <ClInclude Include="Headers\DataStructures\Nodo.hpp" />
+    <ClInclude Include="Headers\DataStructures\PriorityQueue.hpp" />
+    <ClInclude Include="Headers\DataStructures\Queue.hpp" />
+    <ClInclude Include="Headers\DataStructures\Stack.hpp" />
     <ClInclude Include="Headers\Entities\Actividad.hpp" />
     <ClInclude Include="Headers\Entities\Boleta.hpp" />
-    <ClInclude Include="Headers\Entities\Clase.h" />
-    <ClInclude Include="Headers\Entities\Curso.h" />
-    <ClInclude Include="Headers\Entities\Empresa.h" />
-    <ClInclude Include="Headers\Entities\Especializacion.h" />
-    <ClInclude Include="Headers\Entities\Estudiante.h" />
+    <ClInclude Include="Headers\Entities\Clase.hpp" />
+    <ClInclude Include="Headers\Entities\Curso.hpp" />
+    <ClInclude Include="Headers\Entities\Empresa.hpp" />
+    <ClInclude Include="Headers\Entities\Especializacion.hpp" />
+    <ClInclude Include="Headers\Entities\Estudiante.hpp" />
     <ClInclude Include="Headers\Entities\Inscripcion.hpp" />
     <ClInclude Include="Headers\Entities\Usuario.hpp" />
     <ClInclude Include="Headers\Entities\Venta.hpp" />
     <ClInclude Include="Headers\Persistence\InscripcionTypes.hpp" />
     <ClInclude Include="Headers\Persistence\UsuarioTypes.hpp" />
-    <ClInclude Include="Headers\Screens\DashboardEstudianteScreen.h" />
-    <ClInclude Include="Headers\Screens\DashboardOrganizacionScreen.h" />
-    <ClInclude Include="Headers\Screens\EditarPerfilScreen.h" />
-    <ClInclude Include="Headers\Screens\ExplorarContenidoScreen.h" />
+    <ClInclude Include="Headers\Screens\DashboardEstudianteScreen.hpp" />
+    <ClInclude Include="Headers\Screens\DashboardOrganizacionScreen.hpp" />
+    <ClInclude Include="Headers\Screens\EditarPerfilScreen.hpp" />
+    <ClInclude Include="Headers\Screens\ExplorarContenidoScreen.hpp" />
     <ClInclude Include="Headers\Screens\LandingPageScreen.hpp" />
-    <ClInclude Include="Headers\Screens\LoginScreen.h" />
-    <ClInclude Include="Headers\Screens\MostrarCursoScreen.h" />
-    <ClInclude Include="Headers\Screens\MostrarEspecialidadScreen.h" />
-    <ClInclude Include="Headers\Screens\PerfilEstudianteScreen.h" />
-    <ClInclude Include="Headers\Screens\PerfilOrganizacionScreen.h" />
-    <ClInclude Include="Headers\Screens\RegistroScreen.h" />
-    <ClInclude Include="Headers\Screens\VerBoletasScreen.h" />
+    <ClInclude Include="Headers\Screens\LoginScreen.hpp" />
+    <ClInclude Include="Headers\Screens\MostrarCursoScreen.hpp" />
+    <ClInclude Include="Headers\Screens\MostrarEspecialidadScreen.hpp" />
+    <ClInclude Include="Headers\Screens\PerfilEstudianteScreen.hpp" />
+    <ClInclude Include="Headers\Screens\PerfilOrganizacionScreen.hpp" />
+    <ClInclude Include="Headers\Screens\RegistroScreen.hpp" />
+    <ClInclude Include="Headers\Screens\VerBoletasScreen.hpp" />
     <ClInclude Include="Headers\Utils\ScreenSystem.hpp" />
-    <ClInclude Include="Headers\Utils\SystemUtils.h" />
-    <ClInclude Include="Headers\Utils\UI_Ascii.h" />
+    <ClInclude Include="Headers\Utils\SystemUtils.hpp" />
+    <ClInclude Include="Headers\Utils\UI_Ascii.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
