--- a/CourseraClone.vcxproj.filters
+++ b/CourseraClone.vcxproj.filters
@@ -169,5 +169,8 @@
     <ClInclude Include="Headers\Persistence\BoletaTypes.hpp">
       <Filter>Header Files\Persistence</Filter>
     </ClInclude>
+    <ClInclude Include="Headers\Utils\DataPaths.hpp">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
